objects/LeasePayment__c.object
<CustomObject>
    <fields>
        <fullName>ITC_Calculation__c</fullName>
        <formula>((((PV_Cost__c * 1.09)*1.01) + Inverter_Cost__c + Monitoring__c + BOS_Cost__c )*1.04) + Total_Service_Cost_Dealer_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITC Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITC_Cash_Grant_Valuation_acctg__c</fullName>
        <label>ITC/Cash Grant Valuation (acctg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Interconnect_Date__c</fullName>
        <inlineHelpText>the report interconnect/PIS to government rebate program</inlineHelpText>
        <label>Incentive Interconnect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Homeowner Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Waiver_Received_Date__c</fullName>
        <label>Inspection Waiver Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inspection Waiver</description>
        <label>Inspection Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Acculmage_Confirmed__c</fullName>
        <description>Install Acculmage Confirmed</description>
        <label>Install Acculmage Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Doc_Count__c</fullName>
        <formula>Install_Inv_Rcvd_YN__c  +  Acceptance_Rcvd_YN__c + Cnfrmd_ICF_Rcvd_YN__c  +  Des_Plan_Rcvd_YN__c  +  Fin_Permits_Rcvd_YN__c  +  Photos_Rcvd_YN__c  +  Warr_SNs_Rcvd_YN__c  +  Cond_Prog_LW_Rcvd_YN__c + SMS_Installation_Checklist_Received_YN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Doc Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Docs_Remaining_Temp__c</fullName>
        <description>It&apos;s a temp field with the new rollup field through trigger.</description>
        <formula>Install_Documents_Required_Temp__c - Submitted_Install_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Docs Remaining Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Docs_Remaining__c</fullName>
        <formula>Install_Documents_Required__c  - Install_Docs_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Docs Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Docs_Submitted__c</fullName>
        <description>Counts install invoice documents that are pending or approved</description>
        <label>Install Docs Submitted</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending, Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Install_Documents_Remaining__c</fullName>
        <description>This field provides the number of documents that the partner still needs to submit.</description>
        <formula>Install_Documents_Required__c  - Install_Documents_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Documents Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Documents_Required_Temp__c</fullName>
        <formula>IF(
    ISBLANK( Install_Pymnt_Apprvd__c ), 
    Total_Install_Docs__c, 
    Approved_Install_Docs__c 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>it&apos;s a temp field with the new rollup field through trigger.</inlineHelpText>
        <label>Install Documents Required Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Documents_Required__c</fullName>
        <formula>IF(

 ISBLANK(  Install_Pymnt_Apprvd__c  ),  Install_Invoice_Docs_Required__c ,  Approved_Install_Documents__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Documents Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Documents_Submitted__c</fullName>
        <description>Counts install invoice documents that are pending or approved</description>
        <label>Install Documents Submitted</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending, Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Install_Fees__c</fullName>
        <description>This formula field first returns the sum of Dealer Fee Install &amp; Dealer Fee Interconnect from the lease payment unless those fields are blank, in which case it returns the sum of &quot;Origination&quot; &amp; &quot; Installation Fee&quot; from the Quote.</description>
        <formula>IF(

     AND ( ISBLANK(Dealer_Fee_Origination__c), ISBLANK (Dealer_Fee_Install__c) )  ,

     Quote__r.Origination__c  +  Quote__r.Installation_Fee__c ,

     Dealer_Fee_Origination__c  +  Dealer_Fee_Install__c

)</formula>
        <label>Install Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Amount__c</fullName>
        <label>Install Invoice Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Apprvd_TEXT__c</fullName>
        <label>Install Inv Apprvd TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Apprvd__c</fullName>
        <label>Install Inv Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Number__c</fullName>
        <label>Install Invoice Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Rcvd_YN__c</fullName>
        <formula>IF(  ISNULL( Install_Inv_Rcvd__c )  , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Inv Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Inv_Rcvd__c</fullName>
        <label>Install Invoice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Invoice_Docs_Required__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is auto populated by the same trigger that creates invoice documents. It looks at invoice document data and counts the number of documents that are required according to Invoice Document Data.</description>
        <label>Trigger Count of Install Docs Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Invoice_Document_Count__c</fullName>
        <description>Will just use for data retrofit of Lease Timeline</description>
        <label>Install Invoice Document Count</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Install_Pymnt_Apprvd__c</fullName>
        <label>Install Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Pymnt_Sent__c</fullName>
        <label>Install Payment PAID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Pymnt_Submitted__c</fullName>
        <label>Install Payment Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_URL__c</fullName>
        <formula>HYPERLINK(&quot;/apex/InvoiceDocumentUpload?id=&quot; &amp; Id &amp; &quot;&amp;type=Install&quot;, &quot;Install Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Completed__c</fullName>
        <label>Installation Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Fee_Quote__c</fullName>
        <description>Case 00425112</description>
        <formula>Quote__r.Dealer_Fee_Installation_Partner_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Fee (Quote)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Fees__c</fullName>
        <label>Installation Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Invoce_Paid__c</fullName>
        <label>Installation Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_PO__c</fullName>
        <label>Installation PO #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Request_Date__c</fullName>
        <label>Installation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Start_date_by_the_partner__c</fullName>
        <label>Installation Start date by the partner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconection_Invoice_Paid__c</fullName>
        <label>Interconection Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Docs_Remaining_Temp__c</fullName>
        <formula>Interconnect_Documents_Required_Temp__c - Submitted_Interconnect_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Docs Remaining Temp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Docs_Remaining__c</fullName>
        <formula>Interconnect_Documents_Required__c  - Interconnect_Docs_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Docs Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Docs_Submitted__c</fullName>
        <label>Interconnect Docs Submitted</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interconnect_Documents_Remaining__c</fullName>
        <description>This field provides the number of interconnect invoice documents that the partner still needs to submit</description>
        <formula>Interconnect_Documents_Required__c  - Interconnect_Documents_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Documents Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Documents_Required_Temp__c</fullName>
        <description>it&apos;s a temp field with the new rollup field through trigger.</description>
        <formula>IF (
    ISBLANK( Intrcnct_Pymnt_Apprvd__c ) , 
    Total_Interconnect_Docs__c, 
    Approved_Interconnect_Docs__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Documents Required Temp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Documents_Required__c</fullName>
        <formula>IF (
      ISBLANK( Intrcnct_Pymnt_Apprvd__c ) ,  Interconnect_Invoice_Docs_Required__c ,  Approved_Interconnect_Documents__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Documents Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Documents_Submitted__c</fullName>
        <description>This field counts the number of interconnect invoice documents that are pending or approved</description>
        <label>Interconnect Documents Submitted</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interconnect_Fee__c</fullName>
        <description>This formula field will return the value of Lease Payment Field Dealer Fee - Interconnect , unless that field is blank, in which case it will return the Quote field &quot;Interconnect&quot;</description>
        <formula>IF(

     ISBLANK(Dealer_Fee_Interconnect__c) ,

      Quote__r.Interconnect__c ,  Dealer_Fee_Interconnect__c

)</formula>
        <label>Interconnect Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnect_Hold_Release_Date__c</fullName>
        <description>Case# 00521116. This is as per John Leicester/Jerome Fortunado request to get current date on SPVT Result pass date and Interconnect Approved date which in turn can be used for reporting.</description>
        <formula>IF(ISNULL(SPVT_Result_Pass_Date__c),NULL,
IF(ISNULL(Intrcnct_Pymnt_Apprvd__c),NULL,
IF(ISNULL(Install_Pymnt_Apprvd__c ),NULL,
IF(SPVT_Result_Pass_Date__c &gt; Intrcnct_Pymnt_Apprvd__c,SPVT_Result_Pass_Date__c,
IF(Intrcnct_Pymnt_Apprvd__c &gt; SPVT_Result_Pass_Date__c,Intrcnct_Pymnt_Apprvd__c,
IF(Intrcnct_Pymnt_Apprvd__c == SPVT_Result_Pass_Date__c ,Intrcnct_Pymnt_Apprvd__c, NULL
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Hold Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Hold_Release_Sent_to_AP__c</fullName>
        <description>Case# 00521116. This field is created as per Jerome Fortunado request. This field is used by Jerome&apos;s team to signify that team have sent this lease to AP</description>
        <label>Interconnect Hold Release Sent to AP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Invoice_Docs_Required__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is auto populated by the same trigger that creates invoice documents. It looks at invoice document data and counts the number of documents that are required according to Invoice Document Data.</description>
        <label>Trigger count Interconnect Docs Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Invoice_Document_Count__c</fullName>
        <description>Will just use for data retrofit of Lease Timeline</description>
        <label>Interconnect Invoice Document Count</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interconnect_PO__c</fullName>
        <label>Interconnect PO#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnect_URL__c</fullName>
        <formula>HYPERLINK(&quot;/apex/InvoiceDocumentUpload?id=&quot; &amp; Id &amp; &quot;&amp;type=Interconnect&quot;, &quot;Interconnect Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnect Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Acculmaged_Confirmed__c</fullName>
        <description>Interconnection Acculmaged Confirmed</description>
        <label>Interconnection Acculmaged Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Date__c</fullName>
        <label>Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the interconnection email got sent?
If TRUE (checked) then it means mail already sent</description>
        <label>Interconnection Email (Sent)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interconnection_Fee_Quote__c</fullName>
        <description>Case 00425112</description>
        <formula>Quote__r.Interconnect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnection Fee (Quote)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Fees__c</fullName>
        <label>Interconnection Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Payment_approved_date__c</fullName>
        <label>Interconnection  Payment approved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Request_Date__c</fullName>
        <label>Interconnection Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_payment_date__c</fullName>
        <label>Interconnection payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_quotation_Date_PDR__c</fullName>
        <label>Interconnection quotation Date(PDR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Doc_Count__c</fullName>
        <formula>Intrcnct_Inv_Rcvd_YN__c +  Cmsng_Rpt_Rcvd_YN__c  +  PTO_Ltr_Rcvd_YN__c  + Cond_Fin_LW_Rcvd_YN__c +  Cmpltd_ICF_Rcvd_YN__c + Cnfrmd_Mon_Prvsnd_YN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intrcnct Doc Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Inv_Amount__c</fullName>
        <label>Intrcnct Invoice Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Inv_Apprvd__c</fullName>
        <label>Intrcnct Inv Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Inv_Number__c</fullName>
        <label>Intrcnct Invoice Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Inv_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL(  Intrcnct_Inv_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intrcnct Inv Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Inv_Rcvd__c</fullName>
        <label>Intrcnct Invoice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Ltr_Apprvd__c</fullName>
        <label>Intrcnct Ltr Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Ltr_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL(  Intrcnct_Ltr_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intrcnct Ltr Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Ltr_Rcvd__c</fullName>
        <label>Intrcnct Ltr Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Pymnt_Apprvd__c</fullName>
        <label>Intrcnct Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Pymnt_Sent__c</fullName>
        <label>Interconnect Payment PAID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intrcnct_Pymnt_Submitted__c</fullName>
        <label>Intrcnct Pymnt Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand_2__c</fullName>
        <formula>Quote__r.Inverter_Brand_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Brand 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand__c</fullName>
        <formula>IF( NOT(ISBLANK( Inverter_Brand_old__c )) ,  Inverter_Brand_old__c, Quote__r.Inverter_Brand__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand_old__c</fullName>
        <label>Inverter Brand old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Cost__c</fullName>
        <label>Inverter Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_2__c</fullName>
        <formula>IF( NOT(ISBLANK(  Inverter_Model_2_old__c  )) ,  Inverter_Model_2_old__c , Quote__r.Inverter_Model_2__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Model 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_2_old__c</fullName>
        <description>Inverter Model 2</description>
        <label>Inverter Model 2 old</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_3__c</fullName>
        <description>Inverter Qty 2</description>
        <label>Inverter Qty 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_3_old__c</fullName>
        <description>Inverter Qty 2</description>
        <label>Inverter Qty 2 old</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Model__c</fullName>
        <formula>IF( NOT(ISBLANK( Inverter_Model_old__c )) , Inverter_Model_old__c , Quote__r.Inverter_Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_old__c</fullName>
        <label>Inverter Model old</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Qty_2__c</fullName>
        <formula>IF (( Inverter_Model_3_old__c &gt;= 0) , Inverter_Model_3_old__c, Quote__r.Inverter_Quantity_2__c  )</formula>
        <label>Inverter Qty 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Qty__c</fullName>
        <formula>IF( ( Inverter_Qty_old__c &gt; 0 ) , Inverter_Qty_old__c , Quote__r.Inverter_Quantity__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Qty_old__c</fullName>
        <label>Inverter Qty old</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Numbers__c</fullName>
        <description>Inverter Serial Numbers will be uploaded into Salesforce via import file</description>
        <label>Inverter Serial Numbers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Admin2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides a Lookup value of Users to note the person in charge of the invoicing administration</description>
        <label>Invoice Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lease_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Admin__c</fullName>
        <description>being replaced by Invoice_Admin2 which is a user lookup function. imported info of this field to the replacement field already. can be deleted immediately.</description>
        <label>Invoice Admin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Compliance_Notes__c</fullName>
        <description>This field will contain the Invoice Compliance Notes</description>
        <label>Invoice Compliance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Email__c</fullName>
        <label>Invoice Document Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LPS_Notes__c</fullName>
        <description>Old Field Name : LPS Notes 
CRM Case #: 00778098</description>
        <label>Originations Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastCommaFirst__c</fullName>
        <formula>Last_Name_1__c  &amp; &quot;, &quot; &amp;  First_Name_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastCommaFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Install_Doc_Submission__c</fullName>
        <label>Last Install Document Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interconnect_Doc_Submission__c</fullName>
        <label>Last Interconnect Document Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name_1__c</fullName>
        <formula>IF( NOT(ISBLANK( Last_Name_1_old__c   )) , Last_Name_1_old__c  , null   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_1_old__c</fullName>
        <label>Last Name 1 old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_2__c</fullName>
        <formula>IF( NOT(ISBLANK(Last_Name_2_old__c )) ,Last_Name_2_old__c ,null   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_2_old__c</fullName>
        <label>Last Name 2 old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_1_or_2__c</fullName>
        <description>Lease 1 or 2</description>
        <label>Lease 1 or 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Change_Hold_Applied__c</fullName>
        <description>Loan Phase 2- Renamed the label to remove Lease</description>
        <label>Change Hold Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Change_Hold_Disposition__c</fullName>
        <label>Lease Change Hold Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Lease Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Change_Hold_Released__c</fullName>
        <description>Loan Phase 2- Renamed the label to remove Lease</description>
        <label>Change Hold Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Change_Notes__c</fullName>
        <label>Lease Change Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Change_Type__c</fullName>
        <label>Lease Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee Information Amendment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Close_Date__c</fullName>
        <description>Loan Phase 2- Renamed the label to remove Lease</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Cost_AU__c</fullName>
        <description>It is system price on the quote. This is different from Lease Cost for Any where else</description>
        <formula>If(Country_Domain__c&lt;&gt;&apos;au&apos;,0,Quote__r.System_Price_Excluding_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is system price that comes from Quoting tool</inlineHelpText>
        <label>Lease Cost AU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Cost__c</fullName>
        <label>Lease Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Dup__c</fullName>
        <externalId>true</externalId>
        <label>Lease # (Dup)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Detail_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to CPO Page</label>
        <type>Text</type>
    </fields>
</CustomObject>